--- a/changelog/detailed-release-notes/features-improvements.mdx
+++ b/changelog/detailed-release-notes/features-improvements.mdx
@@ -1,182 +1,133 @@
 ---
 title: "Features & Improvements"
-description: "Comprehensive breakdowns of new and enhanced features, linking to relevant documentation and files where users can explore functionality in depth."
+description: "Summarize all new capabilities, enhancements, and usability improvements introduced in each release, with references to related files and implementation details where possible. Helps users leverage the latest advancements."
 ---
 
-# Features & Improvements
+# Features & Improvements Changelog
 
-Explore the latest capabilities and refinements added to GoogleTest, focusing on enhanced user experience, richer mocking features, and improved test expressiveness. This page provides comprehensive breakdowns linking directly to relevant documentation and code examples, enabling you to leverage new functionalities efficiently.
-
----
-
-## 1. Enhanced Mocking Capabilities with GoogleMock
-
-GoogleTest’s mocking framework, GoogleMock, continues to evolve to offer more expressive, maintainable, and powerful interfaces for creating mocks and configuring their behavior.
-
-### Mock Class Definition with `MOCK_METHOD`
-- Create mocks by defining mock classes using the generic `MOCK_METHOD` macro, which supports:
-  - Virtual and non-virtual methods
-  - Methods with various qualifiers like `const`, `override`, `noexcept`
-  - Handling unprotected commas in complex types by wrapping types with parentheses or using typedefs
-- Mocking private and protected methods is straightforward by declaring mock methods in the `public:` section, allowing external expectation setting through `ON_CALL` and `EXPECT_CALL`.
-
-### Support for Overloaded and Template Methods
-- Mock overloaded functions seamlessly by defining mocks for each overloaded signature.
-- Templates too can be mocked just like ordinary classes.
-
-### Mocking Non-Virtual Methods and Free Functions
-- Non-virtual methods can be mocked by defining mock classes unrelated to the real implementation, enabling compile-time dependency injection.
-- Free functions require wrapping in interfaces or using `MockFunction` for std::function attributes.
-
-### Mock Behavior and Expectation Configuration
-- Use `ON_CALL` to set default behaviors without enforcing call expectations — a recommended practice to avoid brittle tests.
-- Apply `EXPECT_CALL` to define precise expectations, including
-durations, call sequences, and ordering constraints.
-- Employ `NiceMock` to suppress warnings on uninteresting calls or `StrictMock` to convert such calls into failures, tuning strictness to your testing needs.
-
-### Advanced Techniques
-- Delegate calls to fakes, real objects, or parent class methods using `ON_CALL` with lambdas.
-- Simplify interfaces by redispatching complex mock methods to friendlier mock methods for ease of use.
-- Version consolidation: migrate from legacy `MOCK_METHODn` macros to the unified `MOCK_METHOD` macro.
-
-### Actions and Matchers in Detail
-- Rich set of matchers lets you express precise argument validations.
-- Combine matchers, safely cast matchers for type flexibility, and define custom matchers for domain-specific verification.
-- Actions support returned references, live value returns, chaining with `DoAll`, and invocations of external functions, methods, or lambdas.
-- Specialized actions facilitate asynchronous testing, side-effect mocking (e.g., setting output arguments), and argument capturing for complex verifications.
-
-### Common Pitfalls and Best Practices
-- Prefer `ON_CALL` for default behaviors and `EXPECT_CALL` only for strict expectations.
-- Use `NiceMock` or suppress uninteresting calls selectively for cleaner test logs.
-- To avoid brittle tests, limit the granularity of expectations, especially ordering constraints.
-- For asynchronous patterns, synchronize using notifications within mock actions.
-- Avoid mocking concrete classes directly; prefer coding to interfaces to improve test maintainability.
+Welcome to the Features & Improvements changelog page. Here, you will find detailed, user-centric summaries of all new capabilities, enhancements, and usability improvements introduced in every release of GoogleTest and GoogleMock. This documentation is crafted to help you understand what has changed, why these changes matter, and how to leverage the latest advancements effectively in your testing workflows.
 
 ---
 
-## 2. Improved Assertion and Matcher Integration
+## Overview of Features & Improvements
 
-GoogleTest offers a comprehensive set of assertion macros and matcher utilities, facilitating clear and maintainable test expressions.
+GoogleTest and GoogleMock evolve continuously to serve C++ developers with a robust, flexible, and efficient test and mocking framework. Each release brings new features that improve test expressiveness, ease of mock definition, better control of behavior and expectations, and enhanced diagnostics.
 
-### Assertion Types and Usage
-- Standard assertions such as `EXPECT_EQ`, `ASSERT_TRUE`, and their floating-point variants for robust numerical comparisons.
-- Predicate and predicate-format assertions to provide detailed failure messages with rich diagnostics.
-- Assertions supporting matchers through `EXPECT_THAT` allow descriptive and composable conditions.
-
-### String and Exception Assertions
-- String-specific assertions to compare C strings, wide strings, and ignore case as needed.
-- Exception assertions verify expected throws with `EXPECT_THROW`, `ASSERT_THROW`, and their related macros.
-
-### Detailed Failure Reporting
-- GoogleTest automatically prints detailed error messages, including expected and actual values, with support for user-supplied messages.
-- Supports streaming user-friendly representations of complex types using customizable printers.
+This page focuses specifically on these feature additions and enhancements, rather than bug fixes or platform compatibility notes, enabling you to stay updated on the powerful new tools at your disposal.
 
 ---
 
-## 3. Test Lifecycle and Execution Model Enhancements
+## Recent Releases Highlights
 
-Internal improvements around test lifecycle control, event listeners, and test isolation further enhance your ability to manage test executions effectively.
+### Version 1.17.0 and Later
+- **C++17 Minimum Standard:** Starting from release 1.17.x, GoogleTest and GoogleMock require at least C++17, allowing adoption of modern language features improving both framework internals and user-facing APIs.
+- **Improved Mocking Syntax and Flexibility:** New improvements to the `MOCK_METHOD` macro increase expressiveness and usability, especially with complex types and qualifiers.
+- **Enhanced Action and Matcher Support:** Users can now compose more intricate mock behaviors by leveraging expanded built-in actions and matchers, including support for move-only types and richer return value models.
+- **Default Behavior Customization:** The `ON_CALL` and `EXPECT_CALL` macros have received syntax improvements ensuring stricter and clearer semantics about call expectations and default actions.
 
-### Event Listeners and Custom Output
-- Define listeners by subclassing `TestEventListener` or `EmptyTestEventListener` to handle test start/end, results, and other events.
-- Easily integrate custom test output, logging, or automated tools by managing listener lifetimes and mastering event forwarding.
+### Domain-Specific Language Enhancements
+- Assertions and expectations can now be expressed more naturally, with clearer rules around cardinality inference and method overload disambiguation.
+- Retiring expectations with `.RetiresOnSaturation()` become more intuitive, allowing expectations to cleanly retire once saturated, preventing spurious failures in complex mock scenarios.
 
-### Test Fixture and Suite Setups
-- Static shared resources with `SetUpTestSuite` and `TearDownTestSuite` for efficient per-suite resource management.
-- Value-parameterized and typed tests enable scalable and expressive testing over varying data and types.
+### Advanced Mocking Patterns Support
+- Full support for mocking templated classes, overloaded functions, and methods with complex calling conventions.
+- Introduction of flexible sequencing models using `Sequence` and `InSequence` to enforce call order and partial ordering via the `After` clause.
+- Ability to delegate default actions to real or fake objects, letting users mix mocked and real behaviors gracefully.
 
-### Controlled Test Runs
-- Command-line flags and environment variables allow filtering, repeating, shuffling, and sharding tests.
-- Disabled tests can be easily wrapped or enabled temporarily with `DISABLED_` prefixes and `--gtest_also_run_disabled_tests`.
+### Concurrency and Thread Safety Improvements
+- Explicit guidance and synchronization behavior ensure safe and predictable mock behavior in multi-threaded tests.
+- Actions and expectations execute in the calling thread context, preserving thread safety invariants.
 
----
-
-## 4. Upgrading and Migration Guidance
-
-- The framework strongly recommends migrating from legacy `MOCK_METHODn` macros to the modern `MOCK_METHOD` interface.
-- For breaking changes, refer to the [Breaking Changes & Migration guide](/changelog/breaking-migration/breaking-changes) to smoothly adapt test suites.
-- Consult the [Upgrade Guide](/changelog/breaking-migration/upgrade-guide) for detailed steps transitioning to newer GoogleTest versions, including C++17 adoption.
-
----
-
-## Code Examples
-
-### Defining a Mock Class
-```cpp
-class MockFoo : public Foo {
- public:
-  MOCK_METHOD(bool, Transform, (Gadget* g), (override));
-  MOCK_METHOD(void, Resume, (), (override));
-  MOCK_METHOD(int, GetTimeOut, (), (override));
-};
-```
-
-### Setting Expectations
-```cpp
-using ::testing::Return;
-EXPECT_CALL(mock_foo, Transform(_))
-    .WillOnce(Return(true));
-```
-
-### Delegating to a Fake
-```cpp
-class MockFoo : public Foo {
- public:
-  MOCK_METHOD(char, DoThis, (int n), (override));
-  MOCK_METHOD(void, DoThat, (const char* s, int* p), (override));
-
-  void DelegateToFake() {
-    ON_CALL(*this, DoThis).WillByDefault([this](int n) {
-      return fake_.DoThis(n);
-    });
-    ON_CALL(*this, DoThat).WillByDefault([this](const char* s, int* p) {
-      fake_.DoThat(s, p);
-    });
-  }
-
- private:
-  FakeFoo fake_;
-};
-```
-
-### Using Matchers in Expectation
-```cpp
-using ::testing::_;  // wildcard matcher
-EXPECT_CALL(foo, Bar(NotNull()));
-EXPECT_CALL(foo, Baz(AllOf(Gt(5), Le(10))));
-```
-
-### Custom Action Example
-```cpp
-ACTION(IncrementArg1) {
-  return ++(*arg1);
-}
-EXPECT_CALL(foo, Modify(_))
-    .WillOnce(IncrementArg1());
-```
+### Diagnostics and Debugging
+- Enhanced verbosity levels (`--gmock_verbose=info|warning|error`) give users finer control over mock call logging.
+- Detailed failure reports include matched expectations, call ordering issues, and argument mismatch explanations.
 
 ---
 
-## Troubleshooting and Best Practices
+## Key Features and Enhancements Details
 
-- Avoid overconstraining mocks with excessive `EXPECT_CALL`s; prefer `ON_CALL` where verification isn't needed.
-- Suppress warnings on uninteresting calls using `NiceMock` to reduce test log noise.
-- Use `RetiresOnSaturation()` on expectations with upper-call limits to prevent unexpected failures.
-- Structure call order dependencies using `InSequence` or `After` clauses only when necessary to avoid brittle tests.
+### MOCK_METHOD Macro Enhancements
+- Simplified syntax supports method qualifiers such as `const`, `override`, `noexcept`, and reference qualifiers through a unified 4th parameter.
+- Improved handling of method signatures with commas (e.g., template types or pairs) via wrapping with parentheses or aliasing.
+- Supports mocking of all virtual methods, including private or protected ones (via placing `MOCK_METHOD` in the public section).
+- Clear guidance on mocking overloaded methods using `Const()` and matcher type disambiguations.
+
+### Expectation Syntax and Semantics
+- `EXPECT_CALL` allows chaining of clauses like `With()`, `Times()`, `InSequence()`, `After()`, `WillOnce()`, `WillRepeatedly()`, and `RetiresOnSaturation()`.
+- Cardinalities are automatically inferred to simplify common scenarios.
+- Multiple expectations on the same method are resolved with the rule 'last declared matching expectation takes precedence.'
+- Sticky expectations by default, with options to retire explicitly or via sequencing.
+
+### Default Actions and ON_CALL
+- `ON_CALL` specifies default behavior without imposing call count expectations.
+- Supports `WillByDefault` and optional `With` clauses.
+- Latest matching `ON_CALL` action takes precedence.
+
+### Mock Class Modifiers
+- Support for `NiceMock`, `NaggyMock`, and `StrictMock` to control handling of uninteresting calls.
+- These modifiers adjust whether warnings are printed or whether uninteresting calls cause test failures, improving test noise control.
+
+### Advanced Mocking Constructs
+
+- **Delegating to Fakes and Real Objects:** Mocks can delegate method calls to real or fake implementations, allowing retention of existing logic with validation of interaction.
+- **Mocking Move-Only Types:** Methods can mock functions involving `std::unique_ptr` and other move-only objects by use of lambdas or action factories.
+- **Custom Actions and Matchers:** Users can define new matchers with `MATCHER` macros or full matcher classes and create custom actions using lambdas, functors, or by implementing the action interface.
+
+### Ordering and Dependency Management
+- Call expectations can be strictly ordered with sequences or conditionally ordered via `.After` clauses.
+- Expectation sets (`ExpectationSet`) allow grouping and composition of interdependent calls.
+
+### Diagnostics and Test Assistance
+- Running tests with `--gmock_verbose=info` provides a detailed trace of all expectations and calls, facilitating troubleshooting.
+- Complex failures include exact expectation and call stack details helping users pinpoint broken interactions.
+
+### Performance and Build Improvements
+- Compilation speed enhancements by moving mock class constructors and destructors out of headers.
+- Less template bloat and clearer diagnostics reduce build bottlenecks.
 
 ---
 
-For further assistance, please refer to [GoogleMock Cookbook](https://google.github.io/googletest/gmock_cook_book.html) and [GoogleTest Primer](https://google.github.io/googletest/primer.html).
+## Practical Tips for Users
+
+- Use `ON_CALL` to define the default behavior shared by many tests, reserving `EXPECT_CALL` for assertions to avoid brittle tests.
+- Use `.RetiresOnSaturation()` to avoid sticky expectations causing unexpected failures when call counts reach their limits.
+- Prefer `NiceMock` for general-purpose mocks to reduce noisy warnings.
+- For strict validation of mock calls, use `StrictMock`.
+- When mocking overloaded methods, disambiguate using `Const()` or explicit matcher types.
+- Use sequences wisely to specify order constraints that matter, avoiding brittle overly-constrained tests.
+- Remember to give your mock classes a virtual destructor to avoid runtime issues.
 
 ---
 
-## Additional Resources
+## Troubleshooting Common Pitfalls and Guidance
 
-- [GoogleMock README](googlemock/README.md)
-- [Mocking API Reference](docs/reference/mocking.md)
-- [Assertions Reference](docs/reference/assertions.md)
-- [Advanced GoogleTest Topics](docs/advanced.md)
-- [GoogleTest Primer](docs/primer.md)
-- [Changelog: Breaking Changes & Migration](changelog/breaking-migration/breaking-changes)
+- Avoid setting expectations after mock method calls; set `EXPECT_CALL`s upfront.
+- Beware of side-effects in mock actions; expressions in `WillOnce(Return(n++))` are evaluated once when expectation is set, not on every call.
+- Use `ReturnPointee` to return live (evaluated at call time) values instead of cached copies.
+- Beware that `NiceMock` and `StrictMock` apply only to mock methods declared directly in the mock class.
+- Avoid mocking non-virtual methods directly; instead, consider the high-perf dependency injection pattern or introduce interfaces.
 
 ---
+
+## Additional Resources and Links
+
+- [Mock Method Macros Reference](../api_reference/mocking_core/mock_method_macros) for comprehensive macro usage.
+- [EXPECT_CALL and ON_CALL Reference](../api_reference/mocking_core/expect_call_on_call) for detailed expectation syntax and semantics.
+- [NiceMock, NaggyMock, StrictMock Reference](../api_reference/mocking_core/nice_naggy_strict_mocks) for controlling mock behavior on uninteresting calls.
+- [Matchers Reference](../api_reference/matchers_assertions/builtin_matchers) for rich argument matching capabilities.
+- [Actions Reference](../api_reference/actions_and_advanced/standard_actions) for built-in and custom mock method behaviors.
+- [gMock for Dummies Guide](../docs/gmock_for_dummies.md) for a beginner-friendly understanding of mocking.
+- [gMock Cookbook](../docs/gmock_cook_book.md) for advanced recipes and patterns.
+- [Understanding Mock Expectations and Sequences](../concepts/core-models/mock-expectations) for conceptual mastery.
+
+---
+
+## Source Code and Reference Implementation
+
+For detailed reference, see the [gmock-spec-builders_test.cc](../googlemock/test/gmock-spec-builders_test.cc) which tests the spec builder syntax of `EXPECT_CALL` and `ON_CALL`. It provides concrete examples of usage, error conditions, and edge cases.
+
+---
+
+We recommend regularly checking this page and related release notes to stay informed on new enhancements that can make your tests more expressive, maintainable, and robust.
+
+Happy testing with GoogleTest and GoogleMock!
