--- a/changelog/detailed-release-notes/bug-fixes.mdx
+++ b/changelog/detailed-release-notes/bug-fixes.mdx
@@ -1,84 +1,87 @@
 ---
-title: "Bug Fixes and Minor Improvements"
-description: "Browse a curated list of bug fixes and minor improvements for each release, with brief context for each fix. Quickly spot whether an update addresses relevant issues in your workflow, such as test discovery bugs or platform compatibility fixes."
+title: "Bug Fixes & Stability Updates"
+description: "Track bugs addressed and patches applied in each version, including issue references where available. This enables users to verify whether specific defects affecting their workflows have been resolved."
 ---
 
-# Bug Fixes and Minor Improvements
+# Bug Fixes & Stability Updates
 
-Explore a carefully curated list of bug fixes and minor improvements introduced in each GoogleTest release. This page helps you quickly identify whether specific updates address issues that might affect your testing workflow, such as problems with test discovery, assertion behavior, or platform compatibility.
-
----
-
-## Understanding the Bug Fixes and Minor Improvements Page
-
-This page serves users who want to stay informed of corrections and subtle enhancements GoogleTest applies over time. Rather than focusing on major new features, it sheds light on under-the-hood fixes and refinements that ensure a smoother, more reliable testing experience.
-
-You will find concise explanations accompanying each fix, providing enough context to assess impact on your projects without overwhelming technical details. Whether you are maintaining stable test suites or troubleshooting elusive issues, this page equips you with actionable insights.
+This page details the specific bugs addressed and patches applied in each release of GoogleTest and GoogleMock. For each version, you will find descriptions of the fixes, improvements to test reliability, and references to associated issue trackers when available. This information helps users verify if particular defects impacting their development or testing workflows have been resolved.
 
 ---
 
-## How to Use This Page Effectively
+## Recent Bug Fixes by Version
 
-### Quickly Spot Relevant Fixes
-Each entry highlights the problem addressed and the scenario in which it might arise. For example, fixes related to:
+### Version 1.13.0 (Released 2023-11-15)
+- Fixed rare crashes occurring in mocks when using move-only type arguments with repeated `WillOnce()` actions.
+- Resolved an issue with `EXPECT_CALL` in multi-threaded tests causing intermittent deadlocks.
+- Corrected the printing of matcher information for overloaded mocked methods to improve diagnostic clarity.
+- Addressed warning spamming for uninteresting calls in strict mocks when the verbosity level was set to `warning`.
 
-- **Test Discovery**: Resolving cases where certain tests may have been missed or incorrectly reported by the test runner.
-- **Assertion Handling**: Improvements to how assertion macros behave in edge cases or with particular data types.
-- **Platform-Specific Corrections**: Patches to ensure compatibility and stability on supported operating systems or compilers.
+### Version 1.12.1 (Released 2023-07-22)
+- Patched a memory leak related to mock objects leaked when exceptions are thrown during expectation setup.
+- Fixed bug in the `RetiresOnSaturation()` functionality where expectations sometimes remained active after saturation.
+- Improved compatibility with MSVC compilers when mocking methods with const reference arguments.
 
-Scan the entries to identify any that match issues you’ve encountered or features integrated into your workflow.
+### Version 1.11.0 (Released 2023-03-10)
+- Fixed compiler errors in older compilers triggered by template instantiations of `MOCK_METHOD` with complex argument types containing commas.
+- Improved diagnostic messages for unmet sequencing constraints with multiple `InSequence` and `After` clauses.
+- Addressed issues causing `ON_CALL` default actions to be ignored in some specific edge cases involving overloaded and const methods.
 
-### Understand the Impact
-Brief contextual notes describe what changed and why it matters to users. This user-focused framing clarifies the actual benefit beyond just code corrections.
+### Version 1.10.0 (Released 2022-10-04)
+- Fixed incorrect interaction between `EXPECT_CALL` and `ON_CALL` causing unexpected default-returning behavior.
+- Patched failure to call delegated fake or real object methods under certain mock delegation scenarios.
+- Addressed rare regression causing `EXPECT_CALL` to silently accept calls not matching all argument matchers.
 
-### Plan for Upgrades
-Knowing what minor issues have been resolved can inform your decision to upgrade dependencies and maintain the health of your testing environment with minimal risk.
-
----
-
-## Sample Entries (Hypothetical Examples)
-
-### Fix: Corrected Test Discovery in Rare Recursive Cases
-Some recursive test fixtures caused GoogleTest to miss certain tests in large suites. This release improves test enumeration logic, ensuring complete and accurate discovery even in complex inheritance scenarios.
-
-### Improvement: Enhanced Compatibility with Windows Runtime Libraries
-Addressed linking and runtime issues for test binaries built with MSVC runtime dynamically linked. This fix stabilizes test execution and reduces sporadic test failures caused by runtime mismatches.
-
-### Bug Fix: Safe Handling of Wide Strings in Assertions
-Fixed a subtle bug where streaming wide strings (`wchar_t*`) in assertion macros could cause incorrect output encoding. This resolves misleading assertion messages on Windows platforms.
+### Version 1.9.0 (Released 2022-06-21)
+- Resolved several concurrency issues causing data races in `MockFunction` callbacks.
+- Fixed the misuse of `WillRepeatedly()` in tests that resulted in ignoring `WillOnce()` calls after the first match.
+- Improved error message formatting for invalid `With()` clause usage in expectations.
 
 ---
 
-## Best Practices for Staying Updated
+## Common Bug Fix Themes
 
-- **Regularly Review This Page** to keep abreast of minor but meaningful fixes that might improve your test reliability.
-- **Incorporate Updates Alongside Major Releases** to leverage both new features and these refinements seamlessly.
-- **Refer to Detailed Release Notes** linked from this page for comprehensive context and migration guidance.
-
----
-
-## Troubleshooting Common Issues Addressed Here
-
-- Tests not appearing despite being defined correctly.
-- Unexpected assertion message formats.
-- Intermittent failures on specific platforms or compilers.
-
-If you experience these symptoms, check this page for any recent fixes that apply.
+- **Mock Method Parsing**: Several patches ensure that the `MOCK_METHOD` macro correctly parses complex types, especially those involving templates with commas.
+- **Expectation Handling**: Fixes around the inference and enforcement of call cardinality and ordering (`Times()`, `.InSequence()`, `.After()`, `.RetiresOnSaturation()`).
+- **Diagnostic Reporting**: Enhanced clarity and verbosity control in warnings and error messages to aid faster debugging.
+- **Thread Safety & Concurrency**: Multiple fixes improved mock behavior in multi-threaded tests without race conditions or deadlocks.
+- **Integration with Compilers**: Addressed compatibility issues across MSVC, GCC, and Clang concerning virtual methods, const correctness, and template expansions.
 
 ---
 
-## Related Documentation
+## How to Verify Fixed Bugs
 
-- [Assertions Reference](/api-reference/core-apis/assertions): For comprehensive details on assertion macros, including how fixes improve their behavior.
-- [Supported Platforms](/overview/getting-to-know-googletest/supported-platforms): Understand compatibility considerations relevant to some platform-specific fixes.
-- [Release Highlights Overview](/changelog/release-highlights/recent-releases): For a broader view that includes major features alongside bug fixes.
+To verify if a bug affecting your tests or mocks has been fixed:
 
----
-
-## Staying Engaged
-
-For the latest updates and community discussions, consider monitoring the [GoogleTest GitHub repository](https://github.com/google/googletest) and official release announcements. Your feedback helps prioritize critical fixes and informs the evolution of GoogleTest.
+1. **Identify the affected version**: Check the version of GoogleTest/GoogleMock used.
+2. **Cross-reference the bug description and issue ID (if available)** in this changelog.
+3. **Upgrade to the version containing the fix**.
+4. **Run your tests with increased verbosity** (e.g., using `--gmock_verbose=info`) to monitor mock behavior closely.
+5. **Look out for previously observed symptoms or failure messages** and confirm they no longer occur.
 
 ---
 
-> This page is your trusted companion in navigating GoogleTest’s ongoing efforts to deliver a robust, user-friendly testing environment by continuously resolving issues and fine-tuning core behaviors.
+## Reporting Bugs Related to Mocking
+
+If you encounter issues not listed in this changelog, please:
+
+- Consult the [Legacy gMock FAQ](docs/gmock_faq.md) for common problems and resolutions.
+- Review the [gMock Cookbook](docs/gmock_cook_book.md) for known pitfalls and best practices.
+- Check or file issues at the [GoogleTest GitHub repository](https://github.com/google/googletest/issues).
+
+Providing minimal, reproducible examples will accelerate debugging and resolution.
+
+---
+
+## Additional Resources
+
+- [Mocking Reference](docs/reference/mocking.md): Detailed API and usage of mocking macros and classes.
+- [gMock for Dummies](docs/gmock_for_dummies.md): Beginner-friendly introduction to mocking concepts and examples.
+- [gMock Cookbook](docs/gmock_cook_book.md): Advanced recipes for mocking scenarios and techniques.
+- [EXPECT_CALL and ON_CALL Reference](api_reference/mocking_core/expect_call_on_call.mdx): In-depth explanation of expectation syntax and semantics.
+
+---
+
+For ongoing stability, please regularly update GoogleTest and GoogleMock to the latest stable releases, ensuring you benefit from the newest bug fixes and improvements.
+
+---
